[package]
name                    = "htu21df-sensor"
version                 = "0.1.0"
authors                 = ["Philipp Gesang <phg@phi-gamma.net>"]
edition                 = "2021"
license                 = "MIT"
documentation           = "https://docs.rs/htu21df-sensor"
repository              = "https://gitlab.com/phgsng/htu21df-sensor"
description             = "support for MEAS HTU21D(F) temperature + humidity sensors"
keywords                = ["htu21d", "temperature", "humidity", "embedded-hal"]

[dependencies]
embedded-hal            = "*"

[dev-dependencies]
embedded-hal-mock       = "*"
